/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Abstractions.Contracts";

message NotifyOrchestrationV1 {
  string orchestration_instance_id = 1; // The id of the orchestration instance to notify.

  string event_name = 2; // The name of the notification event (example: "EnqueueActorMessagesCompleted").

  optional string data = 3; // Optional data serialized as string.
  optional string data_type = 4; // Optional name of the data type. Should be set if data is set.
  optional string data_format = 5; // Optional format the data field is serialized as (example: "application/json" etc.). Should be set if data is set.
}
