/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package google.protobuf;

option csharp_namespace = "Energinet.DataHub.Brs023027.Contracts";

message CalculationEnqueueCompletedV1 {
  string calculationId = 1; // This is a guid.
  CalculationType calculationType = 2;
}

enum CalculationType {
  UNSPECIFIED = 0;
  BALANCE_FIXING = 1;
  AGGREGATION = 2;
  WHOLESALE_FIXING = 3;
  FIRST_CORRECTION_SETTLEMENT = 4;
  SECOND_CORRECTION_SETTLEMENT = 5;
  THIRD_CORRECTION_SETTLEMENT = 6;
}